@@ -43,34 +43,22 @@ namespace WebCore {
     public:
         ResourceRequest(const String& url) 
             : ResourceRequestBase(URL(ParsedURLString, url), UseProtocolCachePolicy)
-#if PLATFORM(IOS)
-            , m_mainResourceRequest(false)
-#endif
         {
         }
 
         ResourceRequest(const URL& url) 
             : ResourceRequestBase(url, UseProtocolCachePolicy)
-#if PLATFORM(IOS)
-            , m_mainResourceRequest(false)
-#endif
         {
         }
 
         ResourceRequest(const URL& url, const String& referrer, ResourceRequestCachePolicy policy = UseProtocolCachePolicy)
             : ResourceRequestBase(url, policy)
-#if PLATFORM(IOS)
-            , m_mainResourceRequest(false)
-#endif
         {
             setHTTPReferrer(referrer);
         }
         
         ResourceRequest()
             : ResourceRequestBase(URL(), UseProtocolCachePolicy)
-#if PLATFORM(IOS)
-            , m_mainResourceRequest(false)
-#endif
         {
         }
         
@@ -82,9 +70,6 @@ namespace WebCore {
 
         ResourceRequest(CFURLRequestRef cfRequest)
             : ResourceRequestBase()
-#if PLATFORM(IOS)
-            , m_mainResourceRequest(false)
-#endif
             , m_cfRequest(cfRequest)
         {
 #if PLATFORM(COCOA)
@@ -94,9 +79,6 @@ namespace WebCore {
 #else
         ResourceRequest(NSURLRequest *nsRequest)
             : ResourceRequestBase()
-#if PLATFORM(IOS)
-            , m_mainResourceRequest(false)
-#endif
             , m_nsRequest(nsRequest)
         {
         }
@@ -135,7 +117,7 @@ namespace WebCore {
         bool isMainResourceRequest() const { return m_mainResourceRequest; }
 
     private:
-        mutable bool m_mainResourceRequest;
+        mutable bool m_mainResourceRequest = false;
 #endif
 
     private:
